tests/paczka1/small_fuzzy/54108984.err
Error in line 4: A865 A865 41,7
Error in line 6: xFQvr2lqb S381 20,3
Error in line 8: xFQvr2lqb A865 27,1
Error in line 11: xFQvr2lqb S717 47,74
Error in line 10: xFQvr2lqb S381 97,7
